Dark mode issue fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,6 @@ body,
 #root ,
 .app{
   height: 100%;
-  width:99%;
+  width:100%;
   font-family: "Inter", sans-serif;
 }
